[package]
name = "yoroi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
salvo = { version = "0.74", features = ["proxy", "affix-state"] }

reqwest = "0.12.9"
tonic = "0.12.3"
prost = "0.13.3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1.2"
tokio-stream = "0.1.16"
hyper-util = { version = "0.1.2", features = [
    "client",
    "client-legacy",
    "http2",
] }
futures = "0.3.31"


[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
